[package]
name = "kvs"
version = "0.1.0"
authors = ["hindenbug <manoj.mk27@gmail.com>"]
edition = "2018"
description = "A key value store"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"

[lib]
test = false
doctest = false

[[bin]]
name = "kvs"
test = false
doctest = false
